force-app/main/default/objects/Item_de_pedido_de_compra__c/Item_de_pedido_de_compra__c.object-meta.xml
<CustomObject>
    <label>Item de cotação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número do item de cotação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de cotação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>