force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Codigo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_produto__c</fullName>
    <formula>Produto__r.ProductCode</formula>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>