force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Data_de_requisicao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_requisicao__c</fullName>
    <label>Data de requisição</label>
    <type>Date</type>
</CustomField>