force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Descri_o_da_linha__c.field-meta.xml
<CustomField>
    <fullName>Descri_o_da_linha__c</fullName>
    <label>Descrição da linha</label>
    <type>TextArea</type>
</CustomField>