force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <formula>TEXT(Produto__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia</label>
    <type>Text</type>
</CustomField>