force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Imagem__c.field-meta.xml
<CustomField>
    <fullName>Imagem__c</fullName>
    <formula>Produto__r.Imagem_do_Produto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem</label>
    <type>Text</type>
</CustomField>