force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Pedido_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_compra__c</fullName>
    <label>Cotação</label>
    <referenceTo>Pedido_de_compra__c</referenceTo>
    <relationshipLabel>Itens de cotação</relationshipLabel>
    <relationshipName>Itens_de_Pedido_de_Compra</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>