force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Produtos_do_pedido</relationshipName>
    <type>Lookup</type>
</CustomField>