force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_comprada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_comprada__c</fullName>
    <label>Quantidade comprada</label>
    <summarizedField>Item_de_fornecedor__c.Quantidade__c</summarizedField>
    <summaryFilterItems>
        <field>Item_de_fornecedor__c.Comprar__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_de_fornecedor__c.Item_de_pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>