force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_Destinada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Destinada__c</fullName>
    <label>Quantidade destinada a receber</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>