force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_disponivel_a_receber__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_disponivel_a_receber__c</fullName>
    <formula>IF(Quantidade_falta_receber__c -  Quantidade_Destinada__c &lt; 0 || Quantidade_falta_receber__c &lt; 0, 0, Quantidade_falta_receber__c -  Quantidade_Destinada__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade disponível a receber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>