force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_falta_receber__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_falta_receber__c</fullName>
    <formula>Quantidade_requisitada__c - Quantidade_recebida__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade falta receber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>