force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_recebida__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_recebida__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade recebida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>