force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Quantidade_total__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_total__c</fullName>
    <label>Quantidade total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>