force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/StatusCotacao__c.field-meta.xml
<CustomField>
    <fullName>StatusCotacao__c</fullName>
    <formula>TEXT(Pedido_de_compra__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusCotação</label>
    <type>Text</type>
</CustomField>