force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Unidade_de_medida__c.field-meta.xml
<CustomField>
    <fullName>Unidade_de_medida__c</fullName>
    <label>Unidade de medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>AMPOLA</fullName>
            </value>
            <value>
                <fullName>BALDE</fullName>
            </value>
            <value>
                <fullName>BANDEJ</fullName>
            </value>
            <value>
                <fullName>BARRA</fullName>
            </value>
            <value>
                <fullName>BISNAG</fullName>
            </value>
            <value>
                <fullName>BLOCO</fullName>
            </value>
            <value>
                <fullName>BOBINA</fullName>
            </value>
            <value>
                <fullName>BOMB</fullName>
            </value>
            <value>
                <fullName>CAPS</fullName>
            </value>
            <value>
                <fullName>CART</fullName>
            </value>
            <value>
                <fullName>CENTO</fullName>
            </value>
            <value>
                <fullName>CJ</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CM2</fullName>
            </value>
            <value>
                <fullName>CX2</fullName>
            </value>
            <value>
                <fullName>CX3</fullName>
            </value>
            <value>
                <fullName>CX5</fullName>
            </value>
            <value>
                <fullName>CX10</fullName>
            </value>
            <value>
                <fullName>CX15</fullName>
            </value>
            <value>
                <fullName>CX20</fullName>
            </value>
            <value>
                <fullName>CX25</fullName>
            </value>
            <value>
                <fullName>CX50</fullName>
            </value>
            <value>
                <fullName>CX100</fullName>
            </value>
            <value>
                <fullName>DISP</fullName>
            </value>
            <value>
                <fullName>DUZIA</fullName>
            </value>
            <value>
                <fullName>EMBAL</fullName>
            </value>
            <value>
                <fullName>FARDO</fullName>
            </value>
            <value>
                <fullName>FOLHA</fullName>
            </value>
            <value>
                <fullName>FRASCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>