force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Valor_da_ultima_compra__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_ultima_compra__c</fullName>
    <label>Valor da última compra</label>
    <summarizedField>Item_de_fornecedor__c.Valor_unit_da_ultima_compra__c</summarizedField>
    <summaryForeignKey>Item_de_fornecedor__c.Item_de_pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>