force-app/main/default/objects/Item_de_pedido_de_compra__c/fields/Valor_total__c.field-meta.xml
<CustomField>
    <fullName>Valor_total__c</fullName>
    <label>Valor total</label>
    <summarizedField>Item_de_fornecedor__c.Valor_total__c</summarizedField>
    <summaryFilterItems>
        <field>Item_de_fornecedor__c.Comprar__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Item_de_fornecedor__c.Item_de_pedido_de_compra__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>