force-app/main/default/objects/Item_de_pedido_de_compra__c/validationRules/Cotacao_em_Rascunho.validationRule-meta.xml
<ValidationRule>
    <fullName>Cotacao_em_Rascunho</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Ignorar_erros__c,
ISNEW(),
TEXT(Pedido_de_compra__r.Status__c) != &apos;1 - Rascunho&apos;
)</errorConditionFormula>
    <errorMessage>A cotação deve estar em Rascunho para inserir itens.</errorMessage>
</ValidationRule>